package org.example.appointment.model;

public enum AppointmentStatus {SCHEDULED, CANCELLED, DONE}
